force-app/main/default/objects/WorkOrder/fields/FieldWorker__c.field-meta.xml
<CustomField>
    <fullName>FieldWorker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Worker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Work Orders (Field Worker)</relationshipLabel>
    <relationshipName>Work_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>