force-app/main/default/objects/WorkOrder/fields/RemoteExpert__c.field-meta.xml
<CustomField>
    <fullName>RemoteExpert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remote Expert</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>