force-app/main/default/objects/WorkOrder/fields/Work_Flow_Selected__c.field-meta.xml
<CustomField>
    <fullName>Work_Flow_Selected__c</fullName>
    <label>Work Flow Selected</label>
    <length>40</length>
    <type>Text</type>
</CustomField>